--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 					<th>List Item</th>	
 				</thead>
 				<tbody>
-					<tr ng-repeat="item in list">
+					<tr ng-repeat="Item in list">
 						<td>{{item}}</td>
 					</tr>
 					<tr>
