--- a/index.html
+++ b/index.html
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="ToDo">
 	<head>
 		<meta charset="UTF-8">
 		<title>Shopping List App</title>
 	</head>
 	<body>
-		<div ng-controller="SampleCtrl">
-			<table>
-				<thead>
-					<th>List Item</th>	
-				</thead>
-				<tbody>
-					<tr ng-repeat="Item in list">
-						<td>{{item}}</td>
-					</tr>
-					<tr>
-						<td><input ng-model="addItem" type="text" placeholder="List Item"></td>
-						<td><button ng-click="addItem()">Add</button></td>
-						<td><button ng-click="removeItem()">Remove</td>
-					</tr>
-				</tbody>
-			</table>	
+		<div ng-controller="todoController">
+			<form name="frm" ng-submit="addTodo()">
+				<input type="text" name="newtodo" ng-model="newtodo" required />
+				<button ng-disabled="frm.$invalid">Go</button>
+			</form>
+			<button ng-click="clearCompleted()">Clear Completed</button>	
 		</div>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
 	<script src="app.js"></script>
