--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 				<button ng-disabled="frm.$invalid">Go</button>
 			</form>
 			<button ng-click="clearCompleted()">Clear Completed</button>	
+			<ul>
+				<li ng-repeat="todo in todos">
+					<input type="checkbox" ng-model="todo.done"/>
+					<span ng-class="{'done':todo.done}">{{todo.title}}</span>
+				</li>
+			</ul>
 		</div>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
 	<script src="app.js"></script>
