--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Shopping List App</title>
+		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 	<body>
 		<div ng-controller="todoController">
